dspace/modules/xmlui-mirage2/src/main/webapp/themes/ukuk_publications/styles/_style.scss
/**
 * The contents of this file are subject to the license and copyright
 * detailed in the LICENSE and NOTICE files at the root of the source
 * tree and available online at
 *
 * http://www.dspace.org/license/
 */

/**
 * You can put your own style in this file.
 * It will be included in all color schemes
 */

 @font-face {
  font-family: palanquinlight; /* deklarace fontu */
  src: url(../fonts/palanquin-light.ttf);
}

@font-face {
  font-family: palanquinthin; /* deklarace fontu */
  src: url(../fonts/palanquin-thin.ttf);
}

@font-face {
  font-family: palanquinmedium;
  src: url(../fonts/palanquin-medium.ttf);
}

 // Issue with homepage display being stretched out

.horizontal-slider {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  flex-wrap: wrap;
  #main-content, #sidebar {
      display: flex;
      flex-direction: column;
  }
}

//example mixin to set the text-selection style
@mixin selection {
    ::-moz-selection { @content; }
    ::selection { @content; }
}

@include selection {
    color: white;
    background: rgba(195,44,46, 0.5);
}

// Body

body {
  color: #000;
  font-family: palanquinlight;
  font-size: 14px;
}

// Sidebar

#main-container #sidebar {
  background: url(../images/bgn.jpg) #f7f7f7;
}

// Headings

h1, .h1 {
  font-size: 25px;
}

h2, .h2 {
  font-size: 21px;
}

h3, .h3 {
  font-size: 19px;
}

h4, .h4 {
  font-size: 17px;
}

h5, .h5 {
  font-size: 15px;
}

h1, .h1, h2, .h2, h3, .h3, h4, .h4, h5, .h5 {
  font-family: palanquinmedium;
}

h1 small, h1 .small, h2 small, h2 .small, 
h3 small, h3 .small, h4 small, h4 .small, 
h5 small, h5 .small, h6 small, h6 .small, 
.h1 small, .h1 .small, .h2 small, .h2 .small, 
.h3 small, .h3 .small, .h4 small, .h4 .small, 
.h5 small, .h5 .small, .h6 small, .h6 .small {
  color: #000;
}

// END OF: Headings

.publication-records-modal, .publication-records-modal ul {
  list-style-type: none;
  padding-left: 0px;
}

.publication-records-import-btn {
  margin: 5px 0px 15px 0px;
}

.bold {
  font-weight: bold;
}

.imported {
  background-color: #E2E2E2;
}

#aspect_submission_StepTransformer_div_StartSubmissionLookupStep {

  #aspect_submission_StepTransformer_field_search {
    width: 81%;
    display: inline;
  }

  #aspect_submission_StepTransformer_field_lookup {
    width:19%
  }

  .modal .modal-body {
    max-height: 500px;
    overflow-y: auto;
  }

  #aspect_submission_StepTransformer_item_publication-title{
    margin-bottom:5px;
  }
}

// Skip link

.main-content-tabber, .main-content-tabber:hover {
	position: absolute;
	top: 0;
	left: 0;
	color: transparent;
}

.main-content-tabber:focus, .main-content-tabber:active {
  display: inline;
	color: #b72c32;
}

// Navigation

header .navbar-default {
  background-color: #fff;
  border-bottom: 3px solid #c32c2e;
}

// Navigation - tabs

.nav-tabs {
  border-bottom: 1px solid #c32c2e;
}

.nav-tabs > li > a {
  border-radius: 0px 0px 0px 0px;
}

.nav-tabs > li.active > a, .nav-tabs > li.active > a:hover, .nav-tabs > li.active > a:focus {
  color: #fff;
  background-color: #c32c2e;
  border: 1px solid #c32c2e;
  border-bottom-color: transparent;
}

.nav-tabs > li > a:hover {
  border-color: rgba(195,44,46, 0.5) rgba(195,44,46, 0.5) #c32c2e;
  color: #fff;
}

.nav > li > a:focus {
  color: #fff;
}

.nav .open > a, .nav .open > a:hover, .nav .open > a:focus {
  background-color: #c32c2e;
  color: #fff;
  border-color: #c32c2e;
}

.dropdown-menu > .active > a, .dropdown-menu > .active > a:hover, .dropdown-menu > .active > a:focus {
  color: #fff;
  background-color: #c32c2e;
}

.dropdown-menu {
  border: 1px solid rgba(195, 44, 46, 0.15);
  border-radius: 0px;
  box-shadow: 0 6px 12px rgba(195, 44, 46, 0.18);
  -webkit-box-shadow: 0 6px 12px rgba(195, 44, 46, 0.18);
}

.nav > li > a:hover, .nav > li > a:focus {
  background-color: rgba(195, 44, 46, 0.5);
}

// Breadcrumbs

.trail-wrapper {
  background-color: #fff;
  border-bottom: 3px solid #c32c2e;
}

.breadcrumb {
  padding: 8px 0 8px 0px;
}

// Links

a {
  color: #c32c2e;
}

// Buttons

.btn {
  border-radius: 0px;
}

.btn-primary {
  color: #fff;
  background-color: #c32c2e;
  border-color: #c32c2e;
}

.btn-default {
  color: #fff;
  background-color: #c32c2e;
  border-color:#000;
}

.btn-default:hover, .btn-default:focus, 
.btn-default.focus, .btn-default:active, 
.btn-default.active, .open > .btn-default.dropdown-toggle {
  color: #000;
  background-color: #fff;
  border-color: #c32c2e;
}

.btn-primary:hover, .btn-primary:focus, 
.btn-primary.focus, .btn-primary:active, 
.btn-primary.active, .open > .btn-primary.dropdown-toggle {
  color: #000;
  background-color: #fff;
  border-color: #c32c2e;
}

header .navbar-default .navbar-toggle:hover, 
header .navbar-default .navbar-toggle:focus, 
header .navbar-default .navbar-nav:hover, 
header .navbar-default .navbar-nav:focus {
  background-color: rgba(195,44,46, 0.5);
  color: #fff;
}

header .navbar-default .navbar-toggle > .open > a, 
header .navbar-default .navbar-toggle > .open > a:hover, 
header .navbar-default .navbar-toggle > .open > a:focus, 
header .navbar-default .navbar-nav > .open > a, 
header .navbar-default .navbar-nav > .open > a:hover, 
header .navbar-default .navbar-nav > .open > a:focus {
  background-color:rgba(195,44,46, 0.5);
  color: #fff;
}

header .navbar-default .navbar-toggle > li > a, 
header .navbar-default .navbar-nav > li > a {
  color: #fff;
}

header .navbar-default .navbar-toggle, 
header .navbar-default .navbar-nav {
  color: #fff;
  background-color: #c32c2e;
}

header .navbar-default .navbar-toggle > li > a:hover, 
header .navbar-default .navbar-toggle > li > a:focus, 
header .navbar-default .navbar-nav > li > a:hover, 
header .navbar-default .navbar-nav > li > a:focus {
  background-color:rgba(195,44,46, 0.5);
  color: #fff;
}

// Menus + its items

.dropdown-menu > li > a {
  color: #000;
}

.dropdown-menu > li > a:hover, .dropdown-menu > li > a:focus {
  background-color:rgba(195,44,46, 0.5);
  color: #fff;
}

// Pagination

.pagination {
  border-radius: 0px;
}

.pagination > li:first-child > a, 
.pagination > li:first-child > span {
  border-bottom-left-radius: 0px;
  border-top-left-radius: 0px;
}

.pagination > li:last-child > a, 
.pagination > li:last-child > span {
  border-top-right-radius: 0px;
  border-bottom-right-radius: 0px;
}

.pagination > .active > a, 
.pagination > .active > a:hover, 
.pagination > .active > a:focus, 
.pagination > .active > span, 
.pagination > .active > span:hover, 
.pagination > .active > span:focus {
  color: #000;
  background-color: #fff;
  border-color: #c32c2e;
}

.pagination > li > a:hover, .pagination > li > a:focus, 
.pagination > li > span:hover, 
.pagination > li > span:focus {
  color: #fff;
  background-color: rgba(195,44,46, 0.5);
  border-color: #c32c2e;
}

.pagination > li > a, 
.pagination > li > span {
  color: #fff;
  background-color: #c32c2e;
  border: 1px solid #000;
}

.pagination > .disabled > span, 
.pagination > .disabled > span:hover, 
.pagination > .disabled > span:focus, 
.pagination > .disabled > a, 
.pagination > .disabled > a:hover, 
.pagination > .disabled > a:focus {
  background-color: #fff;
  border-color: #000;
}

// Forms

.form-control {
  border: 1px solid #000;
  border-radius: 0px;
  color: #000;
}

.form-control:focus {
  border-color: #c32c2e;
  outline: 0;
  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.08), 0 0 8px rgba(195, 44,46, 0.5);
  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.08), 0 0 8px rgba(195, 44, 46, 0.5);
}

// List groups

.list-group-item {
  border: 1px solid #000;
}

.list-group-item:first-child {
  border-top-right-radius: 0px;
  border-top-left-radius: 0px;
}

.list-group-item:last-child {
  border-bottom-left-radius: 0px;
  border-bottom-right-radius: 0px;
}

.list-group-item.active, .list-group-item.active:hover, .list-group-item.active:focus {
  background-color: #c32c2e;
  border-color: #c32c2e;
}

a.list-group-item:hover, a.list-group-item:focus {
  color: #fff;
  background-color: rgba(195,44,46, 0.5);
}

// Search filter labels

.label-primary {
  background-color: #fff;
  color: #000;
  border: 1px solid #000;
}

.label-primary[href]:hover, .label-primary[href]:focus {
  background-color: rgba(195,44,46, 0.5);
  color: #fff;
}
// Tables

.table-hover > tbody > tr:hover {
  background-color: rgba(195,44,46, 0.5);
  color: #fff;
}

// Blockquote

blockquote {
  border-left: 5px solid rgba(195,44,46, 0.5);
}

